src/test/compile-fail/reserved_malloc.mmtn
// { "compile_status": "fail" }

fn malloc() -> u64 {
    0
}

fn main() -> u64 {
    malloc()
}
